question item component

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,23 @@
-<p>main works!</p>
+<div class="main">
+    <div class="main__breadcrumbs">
+        <span class="main__breadcrumbs-item">
+            Главная
+        </span>
+    </div>
+
+    <h1 class="main__title">Главная</h1>
+
+    <h4 class="main__subtitle">Разделы</h4>
+
+    <div class="main__sections">
+        <div class="main__sections-item">
+            <div class="main__section-item-title">Вопросы</div>
+        </div>
+        <div class="main__sections-item">
+            <div class="main__section-item-title">Результаты тестирования</div>
+        </div>
+        <div class="main__sections-item">
+            <div class="main__section-item-title">Пройти тестирование</div>
+        </div>
+    </div>
+</div>
