--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,1 +1,26 @@
-<p>test works!</p>
+<div class="test">
+
+    <h1 class="test__title">Тестирование</h1>
+
+    <div class="test__questions">
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+        <div class="test__questions-item">
+            <app-question></app-question>
+        </div>
+    </div>
+    <button class="test__questions-finish-btn">Закончить</button>
+</div>
