--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,1 +1,35 @@
-<p>results works!</p>
+<div class="results">
+    <div class="results__breadcrumbs">
+        <span class="results__breadcrumbs-item">
+            Главная
+        </span>
+        <span class="results__breadcrumbs-item">
+            Результаты тестирования
+        </span>
+    </div>
+
+    <h1 class="results__title">Результаты тестирования</h1>
+
+    <table class="results__table">
+        <thead class="results__table-head">
+            <tr class="results__table-row">
+                <td>Институт</td>
+                <td>ФИО студента</td>
+                <td>Дата прохождения</td>
+                <td>Результат</td>
+            </tr>
+        </thead>
+        <tbody class="results__table-body">
+            <tr class="results__table-row">
+                <td>Институт 1 </td>
+                <td>ФИО студента 1</td>
+                <td>Дата прохождения</td>
+                <td>Результат</td>
+            </tr>
+        </tbody>
+    </table>
+    <footer class="results__footer">
+        <button>Предыдущая страница</button>
+        <button>Следующая страница</button>
+    </footer>
+</div>
