edit question html

--- a/src/app/edit-test/edit-test.component.html
+++ b/src/app/edit-test/edit-test.component.html
@@ -1,1 +1,14 @@
-<p>edit-test works!</p>
+<div class="test">
+
+    <h1 class="test__title">Тестирование</h1>
+
+    <div class="test__questions">
+        <div class="test__questions-item">
+            <app-edit-question></app-edit-question>
+            <button class="edit-test__btn">Удалить вопрос</button>
+        </div>
+    </div>
+    <button class="edit-test__btn">Добавить вопрос</button>
+
+    <button class="test__questions-finish-btn">Закончить</button>
+</div>
