formly edit test

--- a/src/app/edit-test/edit-test.component.html
+++ b/src/app/edit-test/edit-test.component.html
@@ -1,14 +1,7 @@
-<div class="test">
+<div class="edit-test">
 
-    <h1 class="test__title">Тестирование</h1>
-
-    <div class="test__questions">
-        <div class="test__questions-item">
-            <app-edit-question></app-edit-question>
-            <button class="edit-test__btn">Удалить вопрос</button>
-        </div>
-    </div>
-    <button class="edit-test__btn">Добавить вопрос</button>
-
-    <button class="test__questions-finish-btn">Закончить</button>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
+        <formly-form [form]="form" [fields]="fields" [options]="options" [model]="model"></formly-form>
+        <button type="submit" class="btn">Сохранить изменения</button>
+    </form>
 </div>
