--- a/src/app/edit-test/edit-test.component.css
+++ b/src/app/edit-test/edit-test.component.css
@@ -1,4 +1,4 @@
-.test {
+.edit-test {
   max-width: 980px;
   margin: 0 auto;
   box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.2);
@@ -8,28 +8,6 @@
   height: 100%;
 }
 
-.test__title {
-  font-size: 24px;
-  font-weight: 700;
-  margin-top: 10px;
-}
-
-.test__questions {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-.test__questions-item:not(:last-child) {
-  border-bottom: 2px solid #555;
-}
-
-.test__questions-finish-btn {
-  width: 100%;
-  margin-top: 20px;
-  cursor: pointer;
-}
-
-.edit-test__btn {
+.btn {
   width: 100%;
 }
