test result, table

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-    <h1 class="header__title">
+    <a [routerLink]="['/']" class="header__title">
         Проверка знаний выпускников
-    </h1>
+    </a>
 
     <div class="header__user">
         <div class="header__user-name">
