--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,13 +11,13 @@
 
     <div class="main__sections">
         <div class="main__sections-item">
-            <div class="main__section-item-title">Вопросы</div>
+            <a [routerLink]="['/edit-test']" class="main__section-item-title">Редактирование вопросов</a>
         </div>
         <div class="main__sections-item">
-            <div class="main__section-item-title">Результаты тестирования</div>
+            <a [routerLink]="['/results']" class="main__section-item-title">Результаты тестирований</a>
         </div>
         <div class="main__sections-item">
-            <div class="main__section-item-title">Пройти тестирование</div>
+            <a [routerLink]="['/test']" class="main__section-item-title">Пройти тестирование</a>
         </div>
     </div>
 </div>
