--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -13,18 +13,54 @@
     <table class="results__table">
         <thead class="results__table-head">
             <tr class="results__table-row">
-                <td>Институт</td>
-                <td>ФИО студента</td>
-                <td>Дата прохождения</td>
-                <td>Результат</td>
+                <td class="results__table-cell">Институт</td>
+                <td class="results__table-cell">ФИО студента</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
             </tr>
         </thead>
         <tbody class="results__table-body">
             <tr class="results__table-row">
-                <td>Институт 1 </td>
-                <td>ФИО студента 1</td>
-                <td>Дата прохождения</td>
-                <td>Результат</td>
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
+            </tr>
+            <tr class="results__table-row">
+                <td class="results__table-cell">Институт 1 </td>
+                <td class="results__table-cell">ФИО студента 1</td>
+                <td class="results__table-cell">Дата прохождения</td>
+                <td class="results__table-cell">Результат</td>
             </tr>
         </tbody>
     </table>
