--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -22,5 +22,5 @@
             <app-question></app-question>
         </div>
     </div>
-    <button class="test__questions-finish-btn">Закончить</button>
+    <a [routerLink]="['/test-result']" class="test__questions-finish-btn">Закончить</a>
 </div>
