--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -1,6 +1,8 @@
 <div class="question">
     <div class="question__text">
-        Текст вопроса 1
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio magni quia laborum enim ipsum esse tempora
+        officia cumque nulla dolores earum soluta, doloribus, iusto incidunt quibusdam impedit adipisci? Exercitationem,
+        quia!
     </div>
     <div class="question__images">
         <div class="question__images-item"></div>
@@ -8,9 +10,17 @@
     </div>
 
     <div class="question__answers">
-        <div class="question__answers-item">Текст Ответа 1</div>
-        <div class="question__answers-item">Текст Ответа 2</div>
-        <div class="question__answers-item">Текст Ответа 3</div>
-        <div class="question__answers-item">Текст Ответа 4</div>
+        <div class="question__answers-item">
+            <input type="checkbox">Текст Ответа 1
+        </div>
+        <div class="question__answers-item">
+            <input type="checkbox">Текст Ответа 2
+        </div>
+        <div class="question__answers-item">
+            <input type="checkbox">Текст Ответа 3
+        </div>
+        <div class="question__answers-item">
+            <input type="checkbox">Текст Ответа 4
+        </div>
     </div>
 </div>
