--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -30,7 +30,7 @@
 }
 
 .main__sections-item {
-  width: 150px;
+  width: 250px;
   height: 100px;
   display: flex;
   align-items: center;
@@ -44,4 +44,8 @@
 
 .main__section-item-title {
   text-align: center;
+  font-weight: 600;
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
 }
